--- a/xinx/ui/newversion.ui
+++ b/xinx/ui/newversion.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>589</width>
-    <height>408</height>
+    <height>403</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -197,7 +197,7 @@
        <item>
         <widget class="QSlider" name="horizontalSlider">
          <property name="maximum">
-          <number>3</number>
+          <number>4</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -228,6 +228,14 @@
          <item>
           <property name="text">
            <string>Auto highlight same word</string>
+          </property>
+          <property name="checkState">
+           <enum>Unchecked</enum>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Pretty Print on saving</string>
           </property>
           <property name="checkState">
            <enum>Unchecked</enum>
