--- a/plugins/generix/docks/project/gnxprojectdock.ui
+++ b/plugins/generix/docks/project/gnxprojectdock.ui
@@ -1,70 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GenerixProjectDockWidget</class>
- <widget class="QDockWidget" name="GenerixProjectDockWidget">
+ <widget class="QWidget" name="GenerixProjectDockWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>279</width>
-    <height>375</height>
+    <width>272</width>
+    <height>359</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Generix Business View</string>
   </property>
-  <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="m_filenameLabel">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="buddy">
-         <cstring>m_businessViewList</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="m_prefixLabel">
-        <property name="text">
-         <string>Current
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="m_filenameLabel">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="buddy">
+        <cstring>m_businessViewList</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="m_prefixLabel">
+       <property name="text">
+        <string>Current
 &amp;Prefix :</string>
-        </property>
-        <property name="buddy">
-         <cstring>m_prefixCombo</cstring>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="m_prefixCombo"/>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QListWidget" name="m_businessViewList">
-      <property name="selectionMode">
-       <enum>QAbstractItemView::NoSelection</enum>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+       </property>
+       <property name="buddy">
+        <cstring>m_prefixCombo</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="m_prefixCombo"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QListWidget" name="m_businessViewList">
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
