--- a/plugins/generix/ui/dictionarydockwidget.ui
+++ b/plugins/generix/ui/dictionarydockwidget.ui
@@ -1,89 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>DictionaryDockWidget</class>
- <widget class="QDockWidget" name="DictionaryDockWidget">
+ <widget class="QWidget" name="DictionaryDockWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>242</width>
-    <height>345</height>
+    <width>252</width>
+    <height>330</height>
    </rect>
-  </property>
-  <property name="allowedAreas">
-   <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>Dictionary</string>
   </property>
-  <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="margin">
-     <number>0</number>
-    </property>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QComboBox" name="m_dictionaryList">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="m_addToDico">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../components/xinxpluginselector.qrc">
-          <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="m_updateBase">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../components/xinxpluginselector.qrc">
-          <normaloff>:/images/up.png</normaloff>:/images/up.png</iconset>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="XinxLineEdit" name="m_filterLine"/>
-    </item>
-    <item>
-     <widget class="DictionaryWidget" name="m_dictionaryTreeWidget">
-      <attribute name="headerVisible">
-       <bool>false</bool>
-      </attribute>
-      <column>
-       <property name="text">
-        <string notr="true">1</string>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QComboBox" name="m_dictionaryList">
+       <property name="enabled">
+        <bool>false</bool>
        </property>
-      </column>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="m_informationLbl">
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_addToDico">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../../components/xinxpluginselector.qrc">
+         <normaloff>:/images/add.png</normaloff>:/images/add.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_updateBase">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../../components/xinxpluginselector.qrc">
+         <normaloff>:/images/up.png</normaloff>:/images/up.png</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="XinxLineEdit" name="m_filterLine"/>
+   </item>
+   <item>
+    <widget class="DictionaryWidget" name="m_dictionaryTreeWidget">
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
+     <column>
       <property name="text">
-       <string/>
+       <string notr="true">1</string>
       </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+     </column>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="m_informationLbl">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <customwidgets>
   <customwidget>
