--- a/plugins/core/pluginproperty/parserprojectproperty.ui
+++ b/plugins/core/pluginproperty/parserprojectproperty.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
-    <widget class="QLabel" name="label_12">
+    <widget class="QLabel" name="m_labelDataStream">
      <property name="text">
       <string>Location of the &amp;data stream :</string>
      </property>
